force-app/main/default/objects/Retail_Upload_Return_Shipment_tracking__c/Retail_Upload_Return_Shipment_tracking__c.object-meta.xml
<CustomObject>
    <label>Retail Upload Return Shipment tracking</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Return Shipment No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Upload Return Shipments tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>