force-app/main/default/objects/Retail_Upload_Return_Shipment_tracking__c/fields/Consignment_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Tracking_Number__c</fullName>
    <label>Consignment/Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>