force-app/main/default/objects/Retail_Upload_Return_Shipment_tracking__c/fields/Driver_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_Phone_Number__c</fullName>
    <label>Driver Phone Number</label>
    <type>Phone</type>
</CustomField>