force-app/main/default/objects/Retail_Upload_Return_Shipment_tracking__c/fields/LR_from_transporter__c.field-meta.xml
<CustomField>
    <fullName>LR_from_transporter__c</fullName>
    <label>LR from transporter</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>