force-app/main/default/objects/Retail_Upload_Return_Shipment_tracking__c/fields/Return_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Return_Order_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Return Order ID</label>
    <referenceTo>Retail_Order_Return_Form__c</referenceTo>
    <relationshipLabel>Retail Upload Return Shipments tracking</relationshipLabel>
    <relationshipName>Retail_Upload_Return_Shipments_tracking</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>