force-app/main/default/objects/Retail_Upload_Return_Shipment_tracking__c/fields/Transport_Company__c.field-meta.xml
<CustomField>
    <fullName>Transport_Company__c</fullName>
    <label>Transport Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avinash Cargo Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Batcotranslogistics Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Lalji Mulji Transport Co.</fullName>
            </value>
            <value>
                <fullName>Lavakesh Roadlines</fullName>
            </value>
            <value>
                <fullName>Shree Nashik Goods Transport Co.</fullName>
            </value>
            <value>
                <fullName>VRL Logistics Limited</fullName>
            </value>
            <value>
                <fullName>Any Other</fullName>
            </value>
            <value>
                <fullName>Indian Post</fullName>
            </value>
            <value>
                <fullName>Delhivery Courier</fullName>
            </value>
            <value>
                <fullName>Tirupati Courier Services Pvt Ltd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>