force-app/main/default/objects/Retail_Upload_Return_Shipment_tracking__c/validationRules/Dispatch_should_not_be_furthe_than_curre.validationRule-meta.xml
<ValidationRule>
    <fullName>Dispatch_should_not_be_furthe_than_curre</fullName>
    <active>true</active>
    <errorConditionFormula>Dispatch_Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Dispatch_Date__c</errorDisplayField>
    <errorMessage>Please enter a dispatch date that is not a future date!</errorMessage>
</ValidationRule>