force-app/main/default/objects/Retail_Upload_Return_Shipment_tracking__c/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(ISBLANK( Driver_Phone_Number__c), REGEX( Driver_Phone_Number__c, &quot;^[0-9]{10}$&quot;)))</errorConditionFormula>
    <errorDisplayField>Driver_Phone_Number__c</errorDisplayField>
    <errorMessage>Enter a valid phone number</errorMessage>
</ValidationRule>