force-app/main/default/objects/Retail_Upload_Return_Shipment_tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Consignment_Tracking_Number__c</columns>
    <columns>Customer_s_Prefered_Transport_Company__c</columns>
    <columns>LR_from_transporter__c</columns>
    <columns>Has_Been_Dispatched__c</columns>
    <columns>Transport_Company__c</columns>
    <columns>Vehicle_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>